# object-archive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.sh
include/: mpi_object_archive.hpp  mpi_object_archive_impl.hpp  object_archive.hpp  object_archive_impl.hpp  object_archive_mpi.hpp  object_archive_mpi_impl.hpp
src/: CMakeLists.txt  object_archive.cpp
test/: CMakeLists.txt  mpi_object_archive.cpp  object_archive.cpp  object_archive_mpi.cpp  object_archive_threads.cpp  test_mpi.hpp  test_mpi_main.cpp  threads_object_archive.cpp
